# AssortedTests

./: .gitignore  README.md
HelloWorldCppDocker/: CMakeLists.txt  Dockerfile  README.md
LinePlot/src/: CMakeLists.txt  LinePlot.cxx
ReorientBvecTest/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
